--- a/app/src/static/index.html
+++ b/app/src/static/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <h3>Todo List</h3>
-    <div id="root"></div>
+    <div id="root">
+    </div>
     <script src="js/react.production.min.js"></script>
     <script src="js/react-dom.production.min.js"></script>
     <script src="js/react-bootstrap.js"></script>
